--- a/index.html
+++ b/index.html
@@ -25,39 +25,9 @@
             <h2>Exclusive Finds</h2>
             <div class="item-grid">
                 <div class="item">
-                    <img src="https://via.placeholder.com/300" alt="Rare Item 1">
-                    <h3>Ancient Artifact Replica</h3>
-                    <p class="price">$299.99</p>
-                    <button class="buy-now">Acquire Now</button>
-                </div>
-                <div class="item">
-                    <img src="https://via.placeholder.com/300" alt="Rare Item 2">
-                    <h3>Limited Edition Gadget</h3>
-                    <p class="price">$149.99</p>
-                    <button class="buy-now">Acquire Now</button>
-                </div>
-                <div class="item">
-                    <img src="https://via.placeholder.com/300" alt="Rare Item 3">
-                    <h3>Exotic Plant Species</h3>
-                    <p class="price">$89.99</p>
-                    <button class="buy-now">Acquire Now</button>
-                </div>
-                <div class="item">
-                    <img src="https://via.placeholder.com/300" alt="Rare Item 4">
-                    <h3>Vintage Collectible</h3>
-                    <p class="price">$499.99</p>
-                    <button class="buy-now">Acquire Now</button>
-                </div>
-                <div class="item">
-                    <img src="https://via.placeholder.com/300" alt="Rare Item 5">
-                    <h3>Futuristic Prototype</h3>
-                    <p class="price">$799.99</p>
-                    <button class="buy-now">Acquire Now</button>
-                </div>
-                <div class="item">
-                    <img src="https://via.placeholder.com/300" alt="Rare Item 6">
-                    <h3>Mystical Curiosity</h3>
-                    <p class="price">$249.99</p>
+                    <img src="images/seventeensquare.png" alt="Rare Item 1">
+                    <h3>17 Square Puzzle</h3>
+                    <p class="price">$20.00</p>
                     <button class="buy-now">Acquire Now</button>
                 </div>
             </div>
