Change image and price

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,6 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="images/verdex-logo.png" alt="Verdex Logo" class="logo">
             <h1>Verdex</h1>
             <div id="search">
                 <input type="text" id="search-bar" placeholder="Discover rare treasures...">
@@ -35,7 +34,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Verdex. Unearthing the extraordinary.</p>
+        <p>&copy; 2023 Verdex.</p>
     </footer>
 
     <script src="https://js.stripe.com/v3/"></script>
