--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
                     <img src="images/seventeensquare.png" alt="Rare Item 1">
                     <h3>17 Square Puzzle</h3>
                     <p class="price">$20.00</p>
+                    <a href="https://www.combinatorics.org/files/Surveys/ds7/ds7v5-2009/ds7-2009.html">Puzzle math omg!!!</a>
                     <button class="buy-now" data-price-id="price_1PwInWP4AzUY99eBKsTcTdzT">Acquire Now</button>
                 </div>
             </div>
