Change up the style

--- a/public/index.html
+++ b/public/index.html
@@ -14,31 +14,37 @@
    </script>
 </head>
 <body>
-    <header>
-        <div class="header-content">
-            <h1>Verdex</h1>
-            <div id="search">
-                <input type="text" id="search-bar" placeholder="Discover rare treasures...">
-                <button id="search-button"><i class="fas fa-search"></i></button>
-            </div>
+
+  <header>
+        <div class="container">
+            <nav>
+                <h1>Verdex</h1>
+                <div id="search">
+                    <input type="text" id="search-bar" placeholder="Discover rare treasures...">
+                    <button id="search-button"><i class="fas fa-search"></i></button>
+                </div>
+            </nav>
         </div>
     </header>
 
     <main>
-        <section id="catalog">
-            <h2>Exclusive Finds</h2>
-            <div class="item-grid">
-                <div class="item">
-                    <img src="images/seventeensquare.png" alt="Rare Item 1">
-                    <h3>17 Square Puzzle</h3>
-                    <a href="https://www.combinatorics.org/files/Surveys/ds7/ds7v5-2009/ds7-2009.html" style="color: inherit;" class="button-link">
-                      See puzzle math !
-</a>
-                    <p class="price">$20.00</p>
-                    <button class="buy-now" data-price-id="price_1PwInWP4AzUY99eBKsTcTdzT">Acquire Now</button>
+        <div class="container">
+            <section id="catalog">
+                <h2>Exclusive Finds</h2>
+                <div class="item-grid">
+                    <div class="item">
+                        <img src="images/seventeensquare.png" alt="Anti-Over-Engineering Puzzle">
+                        <h3>The Anti-Over-Engineering Puzzle</h3>
+                        <p class="description">"Embrace simplicity, haze the overcomplicators!"</p>
+                        <a href="https://www.combinatorics.org/files/Surveys/ds7/ds7v5-2009/ds7-2009.html" class="button-link">
+                            Explore the Math
+                        </a>
+                        <p class="price">$20.00</p>
+                        <button class="buy-now" data-price-id="price_1PwInWP4AzUY99eBKsTcTdzT">Acquire Now</button>
+                    </div>
                 </div>
-            </div>
-        </section>
+            </section>
+        </div>
     </main>
 
     <footer>
