--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
    </script>
 </head>
 <body>
+  <div class="banner">
+        <p><i class="fas fa-truck"></i> Same Day Delivery available in San Francisco!</p>
+    </div>
 
   <header>
         <div class="container">
