--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
           <div class="item">
             <img src="images/seventeensquare.png" alt="Anti-Over-Engineering Puzzle">
             <h3>The Anti-Over-Engineering Puzzle</h3>
-            <p class="description">"stop thinking too much"</p>
+            <p class="description">"think better not more"</p>
             <a href="https://www.combinatorics.org/files/Surveys/ds7/ds7v5-2009/ds7-2009.html" class="button-style">
               Explore the Math
             </a>
