--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,17 @@
             </a>
             <button class="buy-now" data-price-id="price_1PwInWP4AzUY99eBKsTcTdzT">Acquire Now</button>
           </div>
+          <div class="item">
+            <img src="images/f14tomcatkey.png" alt="F-14 Tomcat Keyring Holder">
+            <h3>F-14 Tomcat Keyring Holder</h3>
+            <p class="description">"the only way you should ever hang up keys"</p>
+            <p class="designer">Designed by Kwiatens</p>
+            <button class="buy-now" data-price-id="price_1Pxo1gP4AzUY99eBLJKu6zvU">Buy Now</button>
+          </div>
         </div>
-      </section>
     </div>
+      </section>
+      </div>
   </main>
 
   <footer>
