--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
             <button class="buy-now" data-price-id="price_1PwInWP4AzUY99eBKsTcTdzT">Acquire Now</button>
           </div>
           <div class="item">
-            <img src="images/f14tomcatkey.png" alt="F-14 Tomcat Keyring Holder">
+            <img src="images/f14tomcatkey1.png" alt="F-14 Tomcat Keyring Holder">
             <h3>F-14 Tomcat Keyring Holder</h3>
             <p class="description">"the only way you should ever hang up keys"</p>
             <p class="designer">Designed by Kwiatens</p>
