Gross hacky fix

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Verdex - Rare & Unique Treasures</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <!-- Add version numbers to force cache refresh -->
-    <link rel="stylesheet" href="css/style.css?v=1.0.8">
+    <link rel="stylesheet" href="css/style.css?v=1.0.9">
     <link rel="stylesheet" href="css/responsive.css?v=1.1.1">
    <script>
      !function(t,e){var o,n,p,r;e.__SV||(window.posthog=e,e._i=[],e.init=function(i,s,a){function g(t,e){var o=e.split(".");2==o.length&&(t=t[o[0]],e=o[1]),t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}}(p=t.createElement("script")).type="text/javascript",p.async=!0,p.src=s.api_host.replace(".i.posthog.com","-assets.i.posthog.com")+"/static/array.js",(r=t.getElementsByTagName("script")[0]).parentNode.insertBefore(p,r);var u=e;for(void 0!==a?u=e[a]=[]:a="posthog",u.people=u.people||[],u.toString=function(t){var e="posthog";return"posthog"!==a&&(e+="."+a),t||(e+=" (stub)"),e},u.people.toString=function(){return u.toString(1)+".people (stub)"},o="init capture register register_once register_for_session unregister unregister_for_session getFeatureFlag getFeatureFlagPayload isFeatureEnabled reloadFeatureFlags updateEarlyAccessFeatureEnrollment getEarlyAccessFeatures on onFeatureFlags onSessionId getSurveys getActiveMatchingSurveys renderSurvey canRenderSurvey getNextSurveyStep identify setPersonProperties group resetGroups setPersonPropertiesForFlags resetPersonPropertiesForFlags setGroupPropertiesForFlags resetGroupPropertiesForFlags reset get_distinct_id getGroups get_session_id get_session_replay_url alias set_config startSessionRecording stopSessionRecording sessionRecordingStarted captureException loadToolbar get_property getSessionProperty createPersonProfile opt_in_capturing opt_out_capturing has_opted_in_capturing has_opted_out_capturing clear_opt_in_out_capturing debug".split(" "),n=0;n<o.length;n++)g(u,o[n]);e._i.push([i,s,a])},e.__SV=1)}(document,window.posthog||[]);
@@ -39,7 +39,7 @@
         <h2>Exclusive Finds</h2>
         <div class="item-grid">
           <div class="item">
-            <img src="images/seventeensquare.png" alt="Anti-Over-Engineering Puzzle">
+            <img src="images/seventeensquare1.png" alt="Anti-Over-Engineering Puzzle">
             <h3>The Anti-Over-Engineering Puzzle</h3>
             <p class="description">"think better not more"</p>
             <a href="https://www.combinatorics.org/files/Surveys/ds7/ds7v5-2009/ds7-2009.html" class="button-style">
@@ -48,7 +48,7 @@
             <button class="buy-now" data-price-id="price_1PwInWP4AzUY99eBKsTcTdzT">Acquire Now</button>
           </div>
           <div class="item">
-            <img src="images/f14tomcatkey1.png" alt="F-14 Tomcat Keyring Holder">
+            <img src="images/f14tomcatkey1.png" alt="F-14 Tomcat Keyring Holder" loading="lazy" onerror="this.onerror=null; this.src='images/seventeensquare.png';">
             <h3>F-14 Tomcat Keyring Holder</h3>
             <p class="description">"the only way you should ever hang up keys"</p>
             <p class="designer">Designed by Kwiatens</p>
