--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
         <h2>Exclusive Finds</h2>
         <div class="item-grid">
           <div class="item">
-            <img src="images/seventeensquare1.png" alt="Anti-Over-Engineering Puzzle" loading="lazy" onerror="console.error('Failed to load Anti-Over-Engineering Puzzle image')">
+            <img src="images/seventeensquare1.png" alt="Anti-Over-Engineering Puzzle" onerror="console.error('Failed to load Anti-Over-Engineering Puzzle image')">
             <h3>The Anti-Over-Engineering Puzzle</h3>
             <p class="description">"think better not more"</p>
             <a href="https://www.combinatorics.org/files/Surveys/ds7/ds7v5-2009/ds7-2009.html" class="button-style">
@@ -48,7 +48,10 @@
             <button class="buy-now" data-price-id="price_1PwInWP4AzUY99eBKsTcTdzT">Acquire Now</button>
           </div>
           <div class="item">
-            <img src="images/f14tomcatkey1.png" alt="F-14 Tomcat Keyring Holder" loading="lazy" onerror="console.error('Failed to load F-14 Tomcat image'); this.onerror=null; this.src='images/seventeensquare.png';">
+            <img
+               src="images/f14tomcatkey1.png"
+               alt="F-14 Tomcat Keyring Holder"
+               onerror="this.onerror=null; this.src='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNk+A8AAQUBAScY42YAAAAASUVORK5CYII='; this.style='width: 300px; height: 200px; background-color: #cccccc;';">
             <h3>F-14 Tomcat Keyring Holder</h3>
             <p class="description">"the only way you should ever hang up keys"</p>
             <p class="designer">Designed by Kwiatens</p>
