--- a/public/index.html
+++ b/public/index.html
@@ -33,34 +33,34 @@
   </div>
 
 
-  <main>
-    <div class="container">
-      <section id="catalog">
-        <h2>Exclusive Finds</h2>
-        <div class="item-grid">
-          <div class="item">
-            <img src="images/seventeensquare1.png" alt="Anti-Over-Engineering Puzzle" onerror="console.error('Failed to load Anti-Over-Engineering Puzzle image')">
-            <h3>The Anti-Over-Engineering Puzzle</h3>
-            <p class="description">"think better not more"</p>
-            <a href="https://www.combinatorics.org/files/Surveys/ds7/ds7v5-2009/ds7-2009.html" class="button-style">
-              Explore the Math
-            </a>
-            <button class="buy-now" data-price-id="price_1PwInWP4AzUY99eBKsTcTdzT">Acquire Now</button>
-          </div>
-          <div class="item">
-            <img
-               src="images/f14tomcatkey1.png"
-               alt="F-14 Tomcat Keyring Holder"
-               onerror="this.onerror=null; this.src='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNk+A8AAQUBAScY42YAAAAASUVORK5CYII='; this.style='width: 300px; height: 200px; background-color: #cccccc;';">
-            <h3>F-14 Tomcat Keyring Holder</h3>
-            <p class="description">"the only way you should ever hang up keys"</p>
-            <p class="designer">Designed by Kwiatens</p>
-            <button class="buy-now" data-price-id="price_1Pxo1gP4AzUY99eBLJKu6zvU">Buy Now</button>
-          </div>
+<main>
+  <div class="container">
+    <section id="catalog">
+      <h2>Exclusive Finds</h2>
+      <div class="item-grid">
+        <div class="item">
+          <img src="images/seventeensquare1.png" alt="Anti-Over-Engineering Puzzle" onerror="console.error('Failed to load Anti-Over-Engineering Puzzle image')">
+          <h3>The Anti-Over-Engineering Puzzle</h3>
+          <p class="description">"think better not more"</p>
+          <a href="https://www.combinatorics.org/files/Surveys/ds7/ds7v5-2009/ds7-2009.html" class="button-style">
+            Explore the Math
+          </a>
+          <button class="buy-now" data-price-id="price_1PwInWP4AzUY99eBKsTcTdzT">Acquire Now</button>
         </div>
-      </section>
-    </div>
-  </main>
+        <div id="tomcat-item" class="item" style="display: block !important;">
+          <img
+            src="images/f14tomcatkey1.png"
+            alt="F-14 Tomcat Keyring Holder"
+            onerror="this.onerror=null; this.src='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNk+A8AAQUBAScY42YAAAAASUVORK5CYII='; this.style='width: 300px; height: 200px; background-color: #cccccc;'; console.error('F-14 Tomcat image failed to load, using placeholder');">
+          <h3>F-14 Tomcat Keyring Holder</h3>
+          <p class="description">"the only way you should ever hang up keys"</p>
+          <p class="designer">Designed by Kwiatens</p>
+          <button class="buy-now" data-price-id="price_1Pxo1gP4AzUY99eBLJKu6zvU">Buy Now</button>
+        </div>
+      </div>
+    </section>
+  </div>
+</main>
 
   <footer>
     <p>&copy; 2024 Verdex.</p>
@@ -71,6 +71,25 @@
   <script src="js/main.js"></script>
 
   <script>
+    document.addEventListener('DOMContentLoaded', (event) => {
+      const tomcatItem = document.getElementById('tomcat-item');
+      if (tomcatItem) {
+        console.log('Tomcat item is present in the DOM');
+        const computedStyle = window.getComputedStyle(tomcatItem);
+        console.log('Tomcat item display style:', computedStyle.display);
+      } else {
+        console.error('Tomcat item is missing from the DOM');
+      }
+    });
+
+    // Force item to be visible after a short delay
+    setTimeout(() => {
+      const tomcatItem = document.getElementById('tomcat-item');
+      if (tomcatItem) {
+        tomcatItem.style.display = 'block';
+        console.log('Forced Tomcat item to be visible');
+      }
+    }, 1000);
     document.addEventListener('DOMContentLoaded', function() {
       var stripe = Stripe('pk_live_51PwDokP4AzUY99eBtVGNLQCxkX4ScKz93XdImlU9wc4uxbQ2eAO2qvPIvvi1z5YR0s5pPES84O3QWBbcFLlBX1V600cMJ8hROZ');
       document.querySelectorAll('.buy-now').forEach(function(button) {
