There must be more than this provencial css

--- a/public/index.html
+++ b/public/index.html
@@ -33,34 +33,38 @@
   </div>
 
 
-<main>
-  <div class="container">
-    <section id="catalog">
-      <h2>Exclusive Finds</h2>
-      <div class="item-grid">
-        <div class="item">
-          <img src="images/seventeensquare1.png" alt="Anti-Over-Engineering Puzzle" onerror="console.error('Failed to load Anti-Over-Engineering Puzzle image')">
-          <h3>The Anti-Over-Engineering Puzzle</h3>
-          <p class="description">"think better not more"</p>
-          <a href="https://www.combinatorics.org/files/Surveys/ds7/ds7v5-2009/ds7-2009.html" class="button-style">
-            Explore the Math
-          </a>
-          <button class="buy-now" data-price-id="price_1PwInWP4AzUY99eBKsTcTdzT">Acquire Now</button>
+  <main>
+    <div class="container">
+      <section id="catalog">
+        <h2>Exclusive Finds</h2>
+        <div class="item-grid">
+          <div class="item">
+            <div class="image-container">
+              <img src="images/seventeensquare1.png" alt="Anti-Over-Engineering Puzzle" onerror="this.onerror=null; this.src='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNk+A8AAQUBAScY42YAAAAASUVORK5CYII='; this.style='width: 100%; height: 100%; object-fit: cover; background-color: #cccccc;'; console.error('Anti-Over-Engineering Puzzle image failed to load, using placeholder');">
+            </div>
+            <h3>The Anti-Over-Engineering Puzzle</h3>
+            <p class="description">"think better not more"</p>
+            <a href="https://www.combinatorics.org/files/Surveys/ds7/ds7v5-2009/ds7-2009.html" class="button-style">
+              Explore the Math
+            </a>
+            <button class="buy-now" data-price-id="price_1PwInWP4AzUY99eBKsTcTdzT">Acquire Now</button>
+          </div>
+          <div id="tomcat-item" class="item" style="display: block !important;">
+            <div class="image-container">
+              <img
+                  src="images/f14tomcatkey1.png"
+                  alt="F-14 Tomcat Keyring Holder"
+                  onerror="this.onerror=null; this.src='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNk+A8AAQUBAScY42YAAAAASUVORK5CYII='; this.style='width: 100%; height: 100%; object-fit: cover; background-color: #cccccc;'; console.error('F-14 Tomcat image failed to load, using placeholder');">
+            </div>
+            <h3>F-14 Tomcat Keyring Holder</h3>
+            <p class="description">"the only way you should ever hang up keys"</p>
+            <p class="designer">Designed by Kwiatens</p>
+            <button class="buy-now" data-price-id="price_1Pxo1gP4AzUY99eBLJKu6zvU">Buy Now</button>
+          </div>
         </div>
-        <div id="tomcat-item" class="item" style="display: block !important;">
-          <img
-            src="images/f14tomcatkey1.png"
-            alt="F-14 Tomcat Keyring Holder"
-            onerror="this.onerror=null; this.src='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNk+A8AAQUBAScY42YAAAAASUVORK5CYII='; this.style='width: 300px; height: 200px; background-color: #cccccc;'; console.error('F-14 Tomcat image failed to load, using placeholder');">
-          <h3>F-14 Tomcat Keyring Holder</h3>
-          <p class="description">"the only way you should ever hang up keys"</p>
-          <p class="designer">Designed by Kwiatens</p>
-          <button class="buy-now" data-price-id="price_1Pxo1gP4AzUY99eBLJKu6zvU">Buy Now</button>
-        </div>
-      </div>
-    </section>
-  </div>
-</main>
+      </section>
+    </div>
+  </main>
 
   <footer>
     <p>&copy; 2024 Verdex.</p>
