--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,10 @@
     </div>
   </main>
 
+  <div>
+    <button class="buy-now" data-price-id="price_1Pxo1gP4AzUY99eBLJKu6zvU">Buy Tomcat</button
+  </div>
+
   <footer>
     <p>&copy; 2024 Verdex.</p>
   </footer>
