--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
           </div>
           <div class="item">
             <div class="image-container">
-              <img src="images/f14tomcatkey1.png" alt="F-14 Tomcat Keyring Holder" loading="lazy">
+              <img src="https://verdex.cc/IMG_3010.jpg" alt="F-14 Tomcat Keyring Holder" loading="lazy">
             </div>
             <h3>F-14 Tomcat Keyring Holder</h3>
             <p class="description">"the only way you should ever hang up keys"</p>
