Add other image to cdn

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
         <div class="item-grid">
           <div class="item">
             <div class="image-container">
-              <img src="images/seventeensquare1.png" alt="Anti-Over-Engineering Puzzle" loading="lazy">
+              <img src="https://pub-09fc5122b3f5416eb324aeefbed04576.r2.dev/IMG_2948.png" alt="Anti-Over-Engineering Puzzle" loading="lazy">
             </div>
             <h3>The Anti-Over-Engineering Puzzle</h3>
             <p class="description">"think better not more"</p>
