--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
         <div class="item-grid">
           <div class="item">
             <div class="image-container">
-              <img src="https://pub-09fc5122b3f5416eb324aeefbed04576.r2.dev/IMG_2948.png" alt="Anti-Over-Engineering Puzzle" loading="lazy">
+              <img src="https://pub-09fc5122b3f5416eb324aeefbed04576.r2.dev/IMG_2948.png" alt="Anti-Over-Engineering Puzzle">
             </div>
             <h3>The Anti-Over-Engineering Puzzle</h3>
             <p class="description">"think better not more"</p>
@@ -49,7 +49,7 @@
           </div>
           <div class="item">
             <div class="image-container">
-              <img src="https://pub-09fc5122b3f5416eb324aeefbed04576.r2.dev/IMG_3010.jpg" alt="F-14 Tomcat Keyring Holder" loading="lazy">
+              <img src="https://pub-09fc5122b3f5416eb324aeefbed04576.r2.dev/IMG_3010.jpg" alt="F-14 Tomcat Keyring Holder">
             </div>
             <h3>F-14 Tomcat Keyring Holder</h3>
             <p class="description">"the only way you should ever hang up keys"</p>
